{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 278,
  "lineage": "a0071ec6-946b-4e97-f7a1-0377da75e932",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "netrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "Hub-Firewall",
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/azureFirewalls/Hub-Firewall/networkRuleCollections/Allow",
            "name": "Allow",
            "priority": 100,
            "resource_group_name": "HubandSpoke",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "22"
                ],
                "name": "AllowAll",
                "protocols": [
                  "TCP",
                  "UDP",
                  "ICMP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": null
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.Firewallpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.hubsubnet",
            "azurerm_virtual_network.VnetHub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkInterfaces/Spoke1-NIC",
            "internal_domain_name_suffix": "onh1gtxokk3udhxx3iekz3bvwg.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "configuration1",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke1/subnets/default"
              }
            ],
            "location": "eastasia",
            "name": "Spoke1-NIC",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "HubandSpoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.default1",
            "azurerm_virtual_network.VnetSpoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkInterfaces/Spoke2-NIC",
            "internal_domain_name_suffix": "dgmjyyyey1wexhngkutundnoke.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "configuration2",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke2/subnets/default"
              }
            ],
            "location": "eastasia",
            "name": "Spoke2-NIC",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "HubandSpoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.default2",
            "azurerm_virtual_network.VnetSpoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "associate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkInterfaces/Spoke1-NIC|/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkInterfaces/Spoke1-NIC",
            "network_security_group_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.NIC1",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.default1",
            "azurerm_virtual_network.VnetSpoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "associate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkInterfaces/Spoke2-NIC|/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkInterfaces/Spoke2-NIC",
            "network_security_group_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.NIC2",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.default2",
            "azurerm_virtual_network.VnetSpoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "eastasia",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "HubandSpoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Firewallpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/publicIPAddresses/testpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.205.103.121",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "testpip",
            "resource_group_name": "HubandSpoke",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/publicIPAddresses/PIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "PIP",
            "resource_group_name": "HubandSpoke",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/routeTables/HubRT",
            "location": "eastasia",
            "name": "HubRT",
            "resource_group_name": "HubandSpoke",
            "route": [
              {
                "address_prefix": "10.1.0.0/24",
                "name": "Hub-Gw",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/24",
                "name": "Hub-Gw2",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "Sp1RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/routeTables/Spoke1RT",
            "location": "eastasia",
            "name": "Spoke1RT",
            "resource_group_name": "HubandSpoke",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Spoke1-internet",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "Sp2RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/routeTables/Spoke2RT",
            "location": "eastasia",
            "name": "Spoke2RT",
            "resource_group_name": "HubandSpoke",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Spoke2-internet",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "GWsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "HubandSpoke",
            "virtual_network_name": "Hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VnetHub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke1/subnets/default",
            "name": "default",
            "resource_group_name": "HubandSpoke",
            "virtual_network_name": "Spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VnetSpoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke2/subnets/default",
            "name": "default",
            "resource_group_name": "HubandSpoke",
            "virtual_network_name": "Spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VnetSpoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "HubandSpoke",
            "virtual_network_name": "Hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VnetHub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RTAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/routeTables/HubRT",
            "subnet_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub/subnets/GatewaySubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.RT",
            "azurerm_subnet.GWsub",
            "azurerm_virtual_network.VnetHub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RTAssociate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke1/subnets/default",
            "route_table_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/routeTables/Spoke1RT",
            "subnet_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke1/subnets/default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.Sp1RT",
            "azurerm_subnet.default1",
            "azurerm_virtual_network.VnetSpoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RTAssociate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke2/subnets/default",
            "route_table_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/routeTables/Spoke2RT",
            "subnet_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke2/subnets/default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.Sp2RT",
            "azurerm_subnet.default2",
            "azurerm_virtual_network.VnetSpoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VnetHub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6079ebf9-c9ac-40ea-bee1-c1dfbfa76d75",
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub",
            "location": "eastasia",
            "name": "Hub",
            "resource_group_name": "HubandSpoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VnetSpoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4eb34f73-52ee-41bb-9ef7-ea08acf435b6",
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke1",
            "location": "eastasia",
            "name": "Spoke1",
            "resource_group_name": "HubandSpoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VnetSpoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "639c9819-c604-4bec-9da6-5527468dae54",
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke2",
            "location": "eastasia",
            "name": "Spoke2",
            "resource_group_name": "HubandSpoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "Gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.1.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "20.205.98.96"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworkGateways/Hub-Gateway",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/publicIPAddresses/PIP",
                "subnet_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub/subnets/GatewaySubnet"
              }
            ],
            "location": "eastasia",
            "name": "Hub-Gateway",
            "private_ip_address_enabled": false,
            "resource_group_name": "HubandSpoke",
            "sku": "VpnGw1",
            "type": "Vpn",
            "vpn_client_configuration": [
              {
                "address_space": [
                  "10.3.0.0/24"
                ],
                "root_certificate": [
                  {
                    "name": "RootCert",
                    "public_cert_data": "MIIC5zCCAc+gAwIBAgIQOiFPxUhpHa9C2UuEAxDOxzANBgkqhkiG9w0BAQsFADAW\r\nMRQwEgYDVQQDDAtQMlNSb290Q2VydDAeFw0yMjExMjgxNDQyNDdaFw0yMzExMjgx\r\nNTAyNDdaMBYxFDASBgNVBAMMC1AyU1Jvb3RDZXJ0MIIBIjANBgkqhkiG9w0BAQEF\r\nAAOCAQ8AMIIBCgKCAQEAzdFpE8131+7a7EQRTQ/kywY26YVjU9ViUu2xjNEBrMn8\r\nQruVfZXqyh2pnf/vmjNP0ZmYoR+TjKwWJhcSOdDvTYqxudcMfIqLBaFjYARYN2GH\r\nyYQ8zCU4ttTrC/VYLYG5vqqtocK3PolcduDmU5jXe+HL8JQCaUckQwLgruHa3BeV\r\nRCp3ltH53W6B7LAuYd2ZrZgcGQpFX7mDnaUiIzXVnjVf1VWNUE/ [...]
                  }
                ],
                "vpn_auth_types": [
                  "Certificate"
                ],
                "vpn_client_protocols": [
                  "IkeV2",
                  "OpenVPN"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.GWsub",
            "azurerm_virtual_network.VnetHub"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-Spoke1",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Spoke1",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub/virtualNetworkPeerings/Spoke1",
            "name": "Spoke1",
            "remote_virtual_network_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke1",
            "resource_group_name": "HubandSpoke",
            "use_remote_gateways": false,
            "virtual_network_name": "Hub"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.GWsub",
            "azurerm_virtual_network.VnetHub",
            "azurerm_virtual_network.VnetSpoke1",
            "azurerm_virtual_network.VnetSpoke2",
            "azurerm_virtual_network_gateway.Gw"
          ]
        },
        {
          "index_key": "Spoke2",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub/virtualNetworkPeerings/Spoke2",
            "name": "Spoke2",
            "remote_virtual_network_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke2",
            "resource_group_name": "HubandSpoke",
            "use_remote_gateways": false,
            "virtual_network_name": "Hub"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.GWsub",
            "azurerm_virtual_network.VnetHub",
            "azurerm_virtual_network.VnetSpoke1",
            "azurerm_virtual_network.VnetSpoke2",
            "azurerm_virtual_network_gateway.Gw"
          ]
        }
      ]
    },
    {
      "module": "module.Spoke1-Hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Hub",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke1/virtualNetworkPeerings/Hub",
            "name": "Hub",
            "remote_virtual_network_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub",
            "resource_group_name": "HubandSpoke",
            "use_remote_gateways": true,
            "virtual_network_name": "Spoke1"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.GWsub",
            "azurerm_virtual_network.VnetHub",
            "azurerm_virtual_network.VnetSpoke1",
            "azurerm_virtual_network.VnetSpoke2",
            "azurerm_virtual_network_gateway.Gw",
            "module.Hub-Spoke1.azurerm_virtual_network_peering.peering"
          ]
        }
      ]
    },
    {
      "module": "module.Spoke2-Hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Hub",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Spoke2/virtualNetworkPeerings/Hub",
            "name": "Hub",
            "remote_virtual_network_id": "/subscriptions/a32d611c-aa6c-43df-b977-e0e682533b6f/resourceGroups/HubandSpoke/providers/Microsoft.Network/virtualNetworks/Hub",
            "resource_group_name": "HubandSpoke",
            "use_remote_gateways": true,
            "virtual_network_name": "Spoke2"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.GWsub",
            "azurerm_virtual_network.VnetHub",
            "azurerm_virtual_network.VnetSpoke1",
            "azurerm_virtual_network.VnetSpoke2",
            "azurerm_virtual_network_gateway.Gw",
            "module.Hub-Spoke1.azurerm_virtual_network_peering.peering"
          ]
        }
      ]
    }
  ]
}